--- a/src/Interpreters/Interpreters.fsproj
+++ b/src/Interpreters/Interpreters.fsproj
@@ -50,9 +50,11 @@
   -->
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="CommonTypes.fs" />
+    <Compile Include="Variable.fs" />
+    <Compile Include="IVariableSet.fs" />
     <Compile Include="Interpreter.fs" />
     <Compile Include="Parser.fs" />
+    <Compile Include="Common\VariableList.fs" />
     <Compile Include="Common\VariableSet.fs" />
     <Content Include="app.config" />
     <None Include="paket.references" />
