--- a/tests/Interpreters.Logo.Tests/Interpreters.Logo.Tests.fsproj
+++ b/tests/Interpreters.Logo.Tests/Interpreters.Logo.Tests.fsproj
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\tests\NUnit\build\NUnit.props" Condition="Exists('..\packages\tests\NUnit\build\NUnit.props')" Label="Paket" />
+  <Import Project="..\..\packages\tests\NUnit\build\NUnit.props" Condition="Exists('..\..\packages\tests\NUnit\build\NUnit.props')" Label="Paket" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -49,7 +49,7 @@
       </PropertyGroup>
     </When>
   </Choose>
-  <Import Project="..\packages\tests\NUnit3TestAdapter\build\$(__paket__NUnit3TestAdapter_props).props" Condition="Exists('..\packages\tests\NUnit3TestAdapter\build\$(__paket__NUnit3TestAdapter_props).props')" Label="Paket" />
+  <Import Project="..\..\packages\tests\NUnit3TestAdapter\build\$(__paket__NUnit3TestAdapter_props).props" Condition="Exists('..\..\packages\tests\NUnit3TestAdapter\build\$(__paket__NUnit3TestAdapter_props).props')" Label="Paket" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
@@ -74,17 +74,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\src\Interpreters\Interpreters.fsproj">
+    <ProjectReference Include="..\..\src\Interpreters\Interpreters.fsproj">
       <Name>Interpreters</Name>
       <Project>{522a914e-b787-43b6-9630-b169c8c3441b}</Project>
       <Private>True</Private>
     </ProjectReference>
-    <ProjectReference Include="..\src\LOGO\Interpreters.Logo\Interpreters.Logo.fsproj">
+    <ProjectReference Include="..\..\src\LOGO\Interpreters.Logo\Interpreters.Logo.fsproj">
       <Name>Interpreters.Logo</Name>
       <Project>{1d57e43c-c29e-4ea5-be01-028d73781637}</Project>
       <Private>True</Private>
     </ProjectReference>
-    <ProjectReference Include="..\src\Repo\Repo.fsproj">
+    <ProjectReference Include="..\..\src\Repo\Repo.fsproj">
       <Name>Repo</Name>
       <Project>{9e7065a4-ba5e-4752-84bf-54d5c00db60c}</Project>
       <Private>True</Private>
@@ -94,7 +94,7 @@
     <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And $(TargetFrameworkVersion) == 'v4.6.1'">
       <ItemGroup>
         <Reference Include="FSharp.Core">
-          <HintPath>..\packages\tests\FSharp.Core\lib\net45\FSharp.Core.dll</HintPath>
+          <HintPath>..\..\packages\tests\FSharp.Core\lib\net45\FSharp.Core.dll</HintPath>
           <Private>True</Private>
           <Paket>True</Paket>
         </Reference>
@@ -105,7 +105,7 @@
     <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And $(TargetFrameworkVersion) == 'v4.6.1'">
       <ItemGroup>
         <Reference Include="FsUnit.NUnit">
-          <HintPath>..\packages\tests\FsUnit\lib\net46\FsUnit.NUnit.dll</HintPath>
+          <HintPath>..\..\packages\tests\FsUnit\lib\net46\FsUnit.NUnit.dll</HintPath>
           <Private>True</Private>
           <Paket>True</Paket>
         </Reference>
@@ -116,7 +116,7 @@
     <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And $(TargetFrameworkVersion) == 'v4.6.1'">
       <ItemGroup>
         <Reference Include="nunit.framework">
-          <HintPath>..\packages\tests\NUnit\lib\net45\nunit.framework.dll</HintPath>
+          <HintPath>..\..\packages\tests\NUnit\lib\net45\nunit.framework.dll</HintPath>
           <Private>True</Private>
           <Paket>True</Paket>
         </Reference>
