--- a/src/LOGO/LogoScene/LogoScene.csproj
+++ b/src/LOGO/LogoScene/LogoScene.csproj
@@ -63,13 +63,10 @@
     <Compile Include="Controls\Converters\XLineConverter.cs" />
     <Compile Include="Controls\Converters\YLineConverter.cs" />
     <Compile Include="ProgramRunner\ProgramRunner.cs" />
-    <Compile Include="TurtleInterfaces\DoublePoint.cs" />
     <Compile Include="EventArgs\LineEventArgs.cs" />
     <Compile Include="EventArgs\PenActionEventArgs.cs" />
     <Compile Include="EventArgs\RotationEventArgs.cs" />
     <Compile Include="EventArgs\SpeedUpdateEventArgs.cs" />
-    <Compile Include="TurtleInterfaces\ITurtle.cs" />
-    <Compile Include="TurtleInterfaces\ITurtleCommander.cs" />
     <Compile Include="TurtleInterfaces\ITurtleCommanderAsync.cs" />
     <Compile Include="Models\DataLayer\Turtle.cs" />
     <Compile Include="Models\DataLayer\TurtleCommanderAsync.cs" />
@@ -152,6 +149,10 @@
     <ProjectReference Include="..\..\EditorPluginInterfaces\EditorPluginInterfaces.csproj">
       <Project>{6e5f1b5d-f165-4cec-a240-8887ebd28e3b}</Project>
       <Name>EditorPluginInterfaces</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Logo.TurtleInterfaces\Logo.TurtleInterfaces.csproj">
+      <Project>{69309937-d690-4365-85d8-698c30fceff4}</Project>
+      <Name>Logo.TurtleInterfaces</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\PluginManager\PluginManager.csproj">
       <Project>{8b9c8d76-65b3-4a01-9d6f-b6192a823642}</Project>
