--- a/src/Interpreters/Interpreters.fsproj
+++ b/src/Interpreters/Interpreters.fsproj
@@ -56,6 +56,7 @@
     <Compile Include="Exceptions.fs" />
     <Compile Include="Expressions\ExpressionParser.fs" />
     <Compile Include="Expressions\ExpressionParsers\StringExpressionParser.fs" />
+    <Compile Include="ExpressionParserBuilder.fs" />
     <Compile Include="Parser.fs" />
     <Compile Include="Common\VariableList.fs" />
     <Compile Include="VariableSet.fs" />
