-new tests for lexer

--- a/src/Interpreters/Interpreters.fsproj
+++ b/src/Interpreters/Interpreters.fsproj
@@ -50,6 +50,7 @@
   -->
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Types.fs" />
     <Compile Include="Variable.fs" />
     <Compile Include="IVariableSet.fs" />
     <Compile Include="Interpreter.fs" />
@@ -57,7 +58,7 @@
     <Compile Include="Expressions\ExpressionParser.fs" />
     <Compile Include="Expressions\ExpressionParsers\StringExpressionParser.fs" />
     <Compile Include="Expressions\TypeTransform.fs" />
-    <Compile Include="Expressions\Lexems.fs" />
+    <Compile Include="Expressions\Lexemes.fs" />
     <Compile Include="Expressions\Lexer.fs" />
     <Compile Include="ExpressionParserBuilder.fs" />
     <Compile Include="Parser.fs" />
