-expression support added

--- a/src/Interpreters/Interpreters.fsproj
+++ b/src/Interpreters/Interpreters.fsproj
@@ -53,24 +53,25 @@
     <Compile Include="ExpressionType.fs" />
     <Compile Include="RegularType.fs" />
     <Compile Include="ArrType.fs" />
-    <Compile Include="VariableValue.fs" />
+    <Compile Include="ExpressionValue.fs" />
+    <Compile Include="TypeConversion.fs" />
     <Compile Include="Variable.fs" />
     <Compile Include="IVariableSet.fs" />
     <Compile Include="Interpreter.fs" />
     <Compile Include="Exceptions.fs" />
     <Compile Include="Common\VariableList.fs" />
     <Compile Include="VariableSet.fs" />
+    <Compile Include="StateConsole.fs" />
+    <Compile Include="ContextInterfaces.fs" />
+    <Compile Include="EnvironmentOfExpressions.fs" />
     <Compile Include="Expressions\ExpressionsExceptions.fs" />
-    <Compile Include="Expressions\ExpressionParser.fs" />
-    <Compile Include="Expressions\ExpressionParsers\StringExpressionParser.fs" />
     <Compile Include="Expressions\TypeTransform.fs" />
     <Compile Include="Expressions\Lexemes.fs" />
     <Compile Include="Expressions\Lexer.fs" />
     <Compile Include="Expressions\AST.fs" />
     <Compile Include="Expressions\SyntaxParser.fs" />
-    <Compile Include="Expressions\EnvironmentOfExpressions.fs" />
     <Compile Include="Expressions\Evaluator.fs" />
-    <Compile Include="ExpressionParserBuilder.fs" />
+    <Compile Include="StringExpressionParser.fs" />
     <Compile Include="Parser.fs" />
     <Content Include="app.config" />
     <None Include="paket.references" />
