--- a/src/Repo/Repo.fsproj
+++ b/src/Repo/Repo.fsproj
@@ -105,6 +105,7 @@
     <Compile Include="FacadeLayer\ElementRepository.fs" />
     <Compile Include="FacadeLayer\Repo.fs" />
     <Compile Include="RepoFactory.fs" />
+    <Compile Include="ElementHelper.fs" />
     <Content Include="app.config" />
   </ItemGroup>
   <ItemGroup>
