--- a/src/Performers/PerformersScene/PerformersScene.csproj
+++ b/src/Performers/PerformersScene/PerformersScene.csproj
@@ -1,19 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{032211BF-D5A1-4177-BB41-0FC32D57D56C}</ProjectGuid>
+    <ProjectGuid>{AC3A3CF6-5264-4044-962A-021855EC6EE6}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>LogoScene</RootNamespace>
-    <AssemblyName>LogoScene</AssemblyName>
+    <RootNamespace>PerformersScene</RootNamespace>
+    <AssemblyName>PerformersScene</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -36,13 +35,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
@@ -51,10 +46,10 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <ApplicationDefinition Include="App.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </ApplicationDefinition>
+    <Compile Include="App.xaml.cs">
+      <DependentUpon>App.xaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Controls\Converters\BoolToVisibilityConverter.cs" />
     <Compile Include="Controls\Converters\MinusConverter.cs" />
     <Compile Include="Controls\Converters\TurtleAngleConverter.cs" />
@@ -62,22 +57,41 @@
     <Compile Include="Controls\Converters\TurtleYConverter.cs" />
     <Compile Include="Controls\Converters\XLineConverter.cs" />
     <Compile Include="Controls\Converters\YLineConverter.cs" />
-    <Compile Include="ProgramRunner\ProgramRunner.cs" />
+    <Compile Include="Controls\DrawingScene.xaml.cs">
+      <DependentUpon>DrawingScene.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\TurtleControl.xaml.cs">
+      <DependentUpon>TurtleControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="EventArgs\LineEventArgs.cs" />
     <Compile Include="EventArgs\PenActionEventArgs.cs" />
     <Compile Include="EventArgs\RotationEventArgs.cs" />
     <Compile Include="EventArgs\SpeedUpdateEventArgs.cs" />
-    <Compile Include="TurtleInterfaces\ITurtleCommanderAsync.cs" />
-    <Compile Include="Models\DataLayer\Turtle.cs" />
-    <Compile Include="Models\DataLayer\TurtleCommanderAsync.cs" />
-    <Compile Include="Models\DataLayer\DrawingScene.cs" />
-    <Compile Include="Models\DataLayer\TurtleCommander.cs" />
-    <Compile Include="Models\Log\Logger.cs" />
-    <Compile Include="TurtleInterfaces\OrientedLine.cs" />
-    <Compile Include="ViewModels\IAnimationCompletedHandler.cs" />
     <Compile Include="Models\Constants\Constants.cs" />
+    <Compile Include="Models\DataLayer\DrawingScene.cs" />
+    <Compile Include="Models\DataLayer\Turtle.cs" />
+    <Compile Include="Models\DataLayer\TurtleCommander.cs" />
+    <Compile Include="Models\DataLayer\TurtleCommanderAsync.cs" />
+    <Compile Include="Models\Log\Logger.cs" />
     <Compile Include="Operations\PointOperations.cs" />
+    <Compile Include="ProgramRunner\ProgramRunner.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+    <Compile Include="TurtleInterfaces\ITurtleCommanderAsync.cs" />
+    <Compile Include="TurtleInterfaces\OrientedLine.cs" />
     <Compile Include="ViewModels\DrawingSceneViewModel.cs" />
+    <Compile Include="ViewModels\IAnimationCompletedHandler.cs" />
     <Compile Include="ViewModels\LineAfterTurtle.cs" />
     <Compile Include="ViewModels\RelayCommand.cs" />
     <Compile Include="ViewModels\TurtleControlViewModel.cs" />
@@ -86,6 +100,23 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\Validators\IntValidation.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="ArhitectureDiagrams\SimpleArchitecture.cd" />
+    <None Include="paket.references" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
     <Page Include="Controls\DrawingScene.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -94,16 +125,6 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Compile Include="App.xaml.cs">
-      <DependentUpon>App.xaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Controls\DrawingScene.xaml.cs">
-      <DependentUpon>DrawingScene.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Controls\TurtleControl.xaml.cs">
-      <DependentUpon>TurtleControl.xaml</DependentUpon>
-    </Compile>
     <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -118,32 +139,29 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Properties\AssemblyInfo.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <None Include="ArhitectureDiagrams\SimpleArchitecture.cd" />
-    <None Include="paket.references" />
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
+    <Resource Include="View\Pictures\LogoPictures\backward.png" />
+    <Resource Include="View\Pictures\LogoPictures\edge.png" />
+    <Resource Include="View\Pictures\LogoPictures\finalBlock.png" />
+    <Resource Include="View\Pictures\LogoPictures\forward.png" />
+    <Resource Include="View\Pictures\LogoPictures\initialBlock.png" />
+    <Resource Include="View\Pictures\LogoPictures\left.png" />
+    <Resource Include="View\Pictures\LogoPictures\penDown.png" />
+    <Resource Include="View\Pictures\LogoPictures\penUp.png" />
+    <Resource Include="View\Pictures\LogoPictures\repeat.png" />
+    <Resource Include="View\Pictures\LogoPictures\right.png" />
+    <Resource Include="View\Pictures\LogoPictures\star1.png" />
+    <Resource Include="View\Pictures\Toolbar\play.png" />
+    <Resource Include="View\Pictures\Toolbar\redo.png" />
+    <Resource Include="View\Pictures\Toolbar\reset_scene.jpg" />
+    <Resource Include="View\Pictures\Toolbar\stop.png" />
+    <Resource Include="View\Pictures\Toolbar\undo.png" />
+    <Resource Include="View\Pictures\vertex.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <ApplicationDefinition Include="App.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </ApplicationDefinition>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\EditorPluginInterfaces\EditorPluginInterfaces.csproj">
@@ -174,49 +192,6 @@
       <Project>{69309937-d690-4365-85d8-698c30fceff4}</Project>
       <Name>Logo.TurtleInterfaces</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="View\Pictures\LogoPictures\star1.png" />
-    <Resource Include="View\Pictures\vertex.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="View\Pictures\Toolbar\redo.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="View\Pictures\Toolbar\undo.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="View\Pictures\LogoPictures\backward.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="View\Pictures\LogoPictures\edge.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="View\Pictures\LogoPictures\finalBlock.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="View\Pictures\LogoPictures\forward.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="View\Pictures\LogoPictures\initialBlock.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="View\Pictures\LogoPictures\left.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="View\Pictures\LogoPictures\penDown.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="View\Pictures\LogoPictures\penUp.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="View\Pictures\LogoPictures\right.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="View\Pictures\Toolbar\play.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="View\Pictures\LogoPictures\repeat.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Choose>
